🔐 refactor: remover lógica de cookie e padronizar autenticação com JWT